Dynamic game piece intaking and new Autos